[tool.poetry]
name = "BlockchainPython"
version = "0.1.0"
description = ""
authors = ["FQA <otavioalmeida650@protonmail.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
rsa = "^4.7.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
